--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,7 @@ a {
     }
     .logo {
         margin-bottom: 30px;
+        margin-left: 20px;
     }
     .header-text {
         font-size: 20px;
