--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ header {}
     overflow: hidden;
 
 }
+.serve {
+    padding-bottom: 20px;
+}
 
 .cards,
 .form-wrapper,
@@ -312,6 +315,7 @@ form input[type="text"] {
 }
 /* карты */
 .cards {
+    padding-top: 20px;
     padding-left: 70px;
 }
 .card {
@@ -412,6 +416,7 @@ form input[type="text"] {
     }
     .price-table  {
         margin-left: -10px;
+        padding-top: 10px;
     }
 
     .form-control {
@@ -547,6 +552,8 @@ form input[type="text"] {
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Карусель */
 
 
 /* footer */
